# deep-research-assistant

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  live-validation.yml
docs/: ARCHITECTURE.md  ROADMAP.md  THREAT_MODEL.md
docs/demo/: README.md  package-lock.json  package.json  svelte.config.js
docs/demo/src/: app.html
docs/demo/src/routes/: +layout.svelte  (+1 more)
docs/site/: mdsvex.config.js  package-lock.json  package.json  svelte.config.js
docs/site/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
docs/site/src/: app.html
docs/site/static/: CNAME
src/deep_research/: app.py  exceptions.py  settings.py
src/deep_research/agents/: __init__.py  claim_builder.py  counter_evidence.py  evidence_curator.py  knowledge_organizer.py  moderator.py  outline_architect.py  perspective_planner.py  query_planner.py  question_architect.py  research_director.py  section_writer.py  verifier.py
src/deep_research/api/: routes.py
src/deep_research/nodes/: __init__.py  approval.py  budget.py  confidence.py  contradictions.py  coverage.py  deduplication.py  persistence.py  scheduler.py  scope.py  validation.py  verification.py
src/deep_research/policies/: engine.py  identity.py
src/deep_research/schemas/: __init__.py  _time.py  approval.py  claim.py  contradiction.py  draft.py  evidence.py  metrics.py  outline.py  perspective.py  question.py  run.py  scope.py  search.py  source.py  verification.py
src/deep_research/skills/: registry.py
src/deep_research/storage/: __init__.py  database.py  knowledge.py  models.py  repositories.py
src/deep_research/telemetry/: __init__.py  audit.py  events.py  logging.py
src/deep_research/tools/: retrieval.py  search.py
src/deep_research/workflow/: graph.py  recovery.py  routes.py  state.py  stopping.py  watch.py
tests/evals/: test_demo.py
tests/integration/: test_api.py  test_citations.py
tests/unit/: test_agents.py  test_export_markdown.py  test_schemas.py  test_storage.py  test_tools.py  test_verification.py
tests/unit/test_telemetry/: test_logging.py
tests/workflow/: test_graph.py
(+61 files in other folders)
