[project]
name = "deep-research-assistant"
version = "0.1.0"
description = "Enterprise-grade governed research runtime built on Google ADK 2.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Max", email = "me@rmax.io" },
]
dependencies = [
    "google-adk>=2.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "httpx>=0.27",
]
keywords = [
    "research",
    "agent",
    "adk",
    "llm",
    "governance",
    "storm",
    "evidence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
pg = [
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP037", # quoted annotations needed for Pydantic forward refs
    "F821",  # undefined names resolved at runtime
]

[tool.ruff.lint.isort]
known-first-party = ["deep_research"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["deep_research"]

[[tool.mypy.overrides]]
module = ["google.adk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
